@@ -31,13 +31,6 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="3">
-    <widget class="MenuButton" name="configureButton">
-     <property name="toolTip">
-      <string>Configure</string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0" colspan="4">
     <widget class="QListWidget" name="list"/>
    </item>
@@ -60,11 +53,6 @@
    <class>LineEdit</class>
    <extends>QLineEdit</extends>
    <header>support/lineedit.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MenuButton</class>
-   <extends>QToolButton</extends>
-   <header>widgets/menubutton.h</header>
   </customwidget>
   <customwidget>
    <class>NoteLabel</class>
